--- a/1-introduccion.tex
+++ b/1-introduccion.tex
@@ -149,7 +149,7 @@ Peliculas como el Lobo de Wall Street, Jurassic World o Skyfall han incorporado 
 \centering
 \includegraphics[width=0.9\textwidth]{dronefilm}
 \caption{Uso de un drone para grabación.}
-\label{fig:amazon}
+\label{fig:dronefilm}
 \end{figure}
 
 
